[gd_scene load_steps=9 format=2]

[ext_resource path="res://Zero_mod/Objects/Pickups/Armor.gd" type="Script" id=1]
[ext_resource path="res://Zero_mod/Objects/Pickups/Armor.tres" type="SpriteFrames" id=2]
[ext_resource path="res://src/Sounds/12 - MMX - X Life Gain.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Sounds/14 - MMX - X Sub Tank-Heart Powerup.wav" type="AudioStream" id=4]
[ext_resource path="res://Zero_mod/Objects/Pickups/capsule.tres" type="SpriteFrames" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 12.5 )

[node name="Black_Zero" type="Node2D"]
pause_mode = 2
z_index = 10
script = ExtResource( 1 )

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, -36 )
shape = SubResource( 1 )

[node name="Head" type="AnimatedSprite" parent="."]
pause_mode = 1
position = Vector2( 0, -58 )
frames = ExtResource( 2 )
animation = "Head"
playing = true

[node name="Body" type="AnimatedSprite" parent="."]
pause_mode = 1
position = Vector2( 0, -36 )
frames = ExtResource( 2 )
animation = "Body"
playing = true

[node name="Foot" type="AnimatedSprite" parent="."]
pause_mode = 1
position = Vector2( 0, -27 )
frames = ExtResource( 2 )
animation = "Foot"
playing = true

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -4.554
max_distance = 600.0
bus = "SFX"

[node name="audioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -4.554
max_distance = 600.0
bus = "SFX"

[node name="Capsule" type="AnimatedSprite" parent="."]
position = Vector2( 0, -146 )
frames = ExtResource( 5 )
animation = "idle"
frame = 8
playing = true

[node name="staticBody2D" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 0, -146 )
collision_mask = 0

[node name="collisionShape2D" type="CollisionShape2D" parent="staticBody2D"]
position = Vector2( 0, 138 )
shape = SubResource( 2 )

[node name="staticBody2D2" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 0, -146 )
collision_mask = 0

[node name="collisionShape2D" type="CollisionShape2D" parent="staticBody2D2"]
position = Vector2( 0, 71.5 )
shape = SubResource( 3 )

[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
